update, including nn translations
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@53015 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/po/R.pot
+++ b/po/R.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
-"POT-Creation-Date: 2010-09-23 07:21+0100\n"
+"POT-Creation-Date: 2010-09-27 09:34+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -7843,7 +7843,7 @@ msgstr ""
 
 #: src/unix/sys-unix.c:298
 #, c-format
-msgid "error in running command: %s'"
+msgid "error in running command: '%s'"
 msgstr ""
 
 #: src/unix/sys-unix.c:300
@@ -7852,7 +7852,7 @@ msgstr ""
 
 #: src/unix/sys-unix.c:304
 #, c-format
-msgid "running command '%s' had status %d: and error message '%s'"
+msgid "running command '%s' had status %d and error message '%s'"
 msgstr ""
 
 #: src/unix/sys-unix.c:309
