--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: R-2.12.0\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
-"POT-Creation-Date: 2010-09-23 07:21+0100\n"
+"POT-Creation-Date: 2010-09-27 09:34+0100\n"
 "PO-Revision-Date: 2010-09-21 14:14+0200\n"
 "Last-Translator: Detlef Steuer <steuer@hsu-hh.de>\n"
 "Language-Team: R-core <R-core@r-project.org>\n"
@@ -8048,7 +8048,7 @@ msgstr "Zeile %d eventuel abgeschnitten beim Aufruf von system(, intern = TRUE"
 
 #: src/unix/sys-unix.c:298
 #, c-format
-msgid "error in running command: %s'"
+msgid "error in running command: '%s'"
 msgstr "Fehler bei der Ausführung von: '%s'"
 
 #: src/unix/sys-unix.c:300
@@ -8057,8 +8057,8 @@ msgstr "Fehler bei der Ausführung des Kommandos"
 
 #: src/unix/sys-unix.c:304
 #, c-format
-msgid "running command '%s' had status %d: and error message '%s'"
-msgstr "Ausführung von Kommando '%s' ergab Status %d: und Fehlermeldung '%s'"
+msgid "running command '%s' had status %d and error message '%s'"
+msgstr "Ausführung von Kommando '%s' ergab Status %d und Fehlermeldung '%s'"
 
 #: src/unix/sys-unix.c:309
 #, c-format
