--- a/po/nn.po
+++ b/po/nn.po
@@ -1,20 +1,21 @@
 # Translation of R to Norwegian Nynorsk
 # Copyright (C) YEAR The R Foundation
 # This file is distributed under the same license as the R package.
-#
 # Karl Ove Hufthammer <karl@huftis.org>, 2006, 2008, 2009, 2010.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
-"POT-Creation-Date: 2010-09-23 07:21+0100\n"
-"PO-Revision-Date: 2010-04-02 14:30+0200\n"
+"POT-Creation-Date: 2010-09-27 09:34+0100\n"
+"PO-Revision-Date: 2010-09-26 10:06+0200\n"
 "Last-Translator: Karl Ove Hufthammer <karl@huftis.org>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.0\n"
+"Language: nn\n"
+"X-Generator: Lokalize 1.1\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: src/appl/binning.c:73
@@ -409,9 +410,9 @@ msgid "file choice cancelled"
 msgstr "filval avbrote"
 
 #: src/gnuwin32/run.c:228
-#, fuzzy, c-format
+#, c-format
 msgid "CreateProcess failed to run '%s'"
-msgstr "feil ved lesing på %s"
+msgstr "CreateProcess klarte ikkje køyra «%s»"
 
 #: src/gnuwin32/run.c:322
 msgid "Child process not responding.  R will terminate it."
@@ -715,18 +716,18 @@ msgid "character argument expected"
 msgstr "venta teiknargument"
 
 #: src/main/Rdynload.c:903 src/main/Rdynload.c:936
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "unable to load shared object '%s':\n"
 "  %s"
 msgstr ""
-"klarte ikkje lasta det delte biblioteket «%s»:\n"
+"klarte ikkje lasta det delte objektet «%s»:\n"
 "  %s"
 
 #: src/main/Rdynload.c:916
-#, fuzzy, c-format
+#, c-format
 msgid "shared object '%s' was not loaded"
-msgstr "det dynamiske/delte biblioteket «%s» vart ikkje lasta"
+msgstr "det delte objektet «%s» vart ikkje lasta"
 
 #: src/main/Rdynload.c:976
 #, c-format
@@ -1009,12 +1010,12 @@ msgstr "førsteargumentet må vera eit array"
 
 #: src/main/array.c:1051 src/main/array.c:1054
 msgid "'a' does not have named dimnames"
-msgstr ""
+msgstr "«a» har ikkje «dimnames»-namn"
 
 #: src/main/array.c:1061
 #, c-format
 msgid "perm[%d] does not match a dimension name"
-msgstr ""
+msgstr "«perm[%d]» er ikkje i samsvar med eit dimensjonsnamn"
 
 #: src/main/array.c:1068
 msgid "'perm' is of wrong length"
@@ -1025,9 +1026,8 @@ msgid "value out of range in 'perm'"
 msgstr "verdien til «perm» er utanfor gyldig verdiområde"
 
 #: src/main/array.c:1157
-#, fuzzy
 msgid "'resize' must be TRUE or FALSE"
-msgstr "«decreasing» må vera TRUE eller FALSE"
+msgstr "«resize» må vera TRUE eller FALSE"
 
 #: src/main/array.c:1218
 msgid "'x' must be numeric"
@@ -1204,9 +1204,8 @@ msgstr ""
 "det finst ikkje ein slot med namnet «%s» for dette objektet av klassen «%s»"
 
 #: src/main/attrib.c:1535
-#, fuzzy
 msgid "attempt to set slot on NULL object"
-msgstr "prøvde å setja attributt på NULL"
+msgstr "prøvde å setja slot på eit NULL-objekt"
 
 #: src/main/attrib.c:1576
 msgid "formal classes cannot be used without the methods package"
@@ -1919,7 +1918,7 @@ msgstr "feil ved tildeling av gzfile-samband"
 
 #: src/main/connections.c:1325
 msgid "append mode may not do what you expect"
-msgstr ""
+msgstr "append-modusen vil kanskje ikkje verka som du forventar"
 
 #: src/main/connections.c:1333
 #, c-format
@@ -2028,7 +2027,7 @@ msgstr "«con» er ikkje ein ut-«rawConnection»"
 
 #: src/main/connections.c:2422
 msgid "cannot allocate memory for text connection"
-msgstr "klarte ikkje tildela minne til tekstsamband"
+msgstr "klarte ikkje reservera minne til tekstsamband"
 
 #: src/main/connections.c:2470
 msgid "seek is not relevant for text connection"
@@ -2163,13 +2162,12 @@ msgid "can only write to a binary connection"
 msgstr "kan berre skriva til binærsamband"
 
 #: src/main/connections.c:3703
-#, fuzzy
 msgid "only 2^31-1 bytes can be written to a raw vector"
-msgstr "berre ASCII-formatet kan skrivast til tekstmodussamband"
+msgstr "berre 2³¹ − 1 byte kan skrivast til ein råvektor"
 
 #: src/main/connections.c:3705
 msgid "only 2^31-1 bytes can be written in a single readBin() call"
-msgstr ""
+msgstr "berre 2³¹ − 1 byte kan skrivast i eit einskild «readBin()»-kall"
 
 #: src/main/connections.c:3750 src/main/connections.c:3903
 #: src/main/connections.c:4171 src/main/connections.c:4211
@@ -2298,6 +2296,8 @@ msgid ""
 "cannot create a gzcon connection from a writable textConnection; maybe use "
 "rawConnection"
 msgstr ""
+"kan ikkje oppretta eit gzcon-samband frå ein skrivar «textConnection» (du kan "
+"prøva å bruka «rawConnection»)"
 
 #: src/main/connections.c:5036 src/main/connections.c:5040
 #: src/main/connections.c:5047 src/main/connections.c:5061
@@ -2433,7 +2433,7 @@ msgstr "komponent av lengd null i ikkje-tom POSIXlt-struktur"
 
 #: src/main/dcf.c:64 src/main/dcf.c:122 src/main/dcf.c:175
 msgid "could not allocate memory for 'read.dcf'"
-msgstr "klarte ikkje tildela minne til «read.dcf»"
+msgstr "klarte ikkje reservera minne til «read.dcf»"
 
 #: src/main/dcf.c:106
 #, c-format
@@ -2844,7 +2844,7 @@ msgstr "Ikkje samsvar mellom grafikk-API-versjonar"
 
 #: src/main/engine.c:112 src/main/engine.c:117 src/main/engine.c:181
 msgid "unable to allocate memory (in GEregister)"
-msgstr "klarte ikkje tildela minne (i GEregister)"
+msgstr "klarte ikkje reservera minne (i GEregister)"
 
 #: src/main/engine.c:152
 msgid "too many graphics systems registered"
@@ -2869,9 +2869,8 @@ msgid "out of memory while clipping polyline"
 msgstr "ikkje nok minne til klipping av polylinje"
 
 #: src/main/engine.c:1377
-#, fuzzy
 msgid "Invalid graphics path"
-msgstr "Ugyldig grafikktilstand"
+msgstr "Ugyldig grafikkstig"
 
 #: src/main/engine.c:1608
 #, c-format
@@ -3013,24 +3012,22 @@ msgid "cannot add binding of '%s' to the base environment"
 msgstr "kan ikkje leggja binding av «%s» til omgjevnaden «base»"
 
 #: src/main/envir.c:1554
-#, fuzzy
 msgid "first argument must be a named list"
-msgstr "det første argumentet må vera eit filnamn"
+msgstr "det første argumentet må vera ei namna liste"
 
 #: src/main/envir.c:1559
-#, fuzzy
 msgid "names(x) must be valid character(length(x))."
-msgstr "«names» må vera ein teiknvektor"
+msgstr "«names(x)» må vera gyldig character(length(x))"
 
 #: src/main/envir.c:1566
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' must be an environment"
-msgstr "«enclos» må vera ein omgjevnad"
+msgstr "«%s» må vera ein omgjevnad"
 
 #: src/main/envir.c:1579
-#, fuzzy, c-format
+#, c-format
 msgid "invalid '%s' argument: must be NULL or environment"
-msgstr "«env»-argumentet må vera ein omgjevnad"
+msgstr "ugyldig «%s»-argument: må vera NULL eller ein omgjevnad"
 
 #: src/main/envir.c:1609
 msgid "cannot remove variables from base namespace"
@@ -3684,33 +3681,29 @@ msgid "invalid factors"
 msgstr "ugyldige faktorar"
 
 #: src/main/gevents.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "'%s' events not supported in this device"
-msgstr "savePlot() er ikkje støtta på denne bygginga"
+msgstr "«%s»-hendingar er ikkje støtta på denne eininga"
 
 #: src/main/gevents.c:65
-#, fuzzy
 msgid "internal error"
-msgstr "intern feil i «do_sys»"
+msgstr "intern feil"
 
 #: src/main/gevents.c:71
-#, fuzzy
 msgid "this graphics device does not support event handling"
-msgstr "grafikkeininga støttar ikkje grafikkhendingar"
+msgstr "grafikkeininga støttar ikkje hendingshandsaming"
 
 #: src/main/gevents.c:111
 msgid "invalid prompt"
 msgstr "ugyldig spørjing"
 
 #: src/main/gevents.c:123
-#, fuzzy
 msgid "recursive use of getGraphicsEvent not supported"
-msgstr "bruk av «%s» i inndata er ikkje støtta"
+msgstr "rekursiv bruk av «getGraphicsEvent» er ikkje støtta"
 
 #: src/main/gevents.c:133
-#, fuzzy
 msgid "no graphics event handlers set"
-msgstr "ingen verksame grafikkeiningar"
+msgstr "ingen grafikkhendingshandsamarar definerte"
 
 #: src/main/gram.y:137 src/main/gram.y:152 src/main/gram.y:2007
 #: src/main/gram.y:2021
@@ -3845,6 +3838,8 @@ msgstr "«\\%c» er eit ukjent verneteikn i tekststreng som startar med «%s»"
 #: src/main/gram.y:2282
 msgid "mixing Unicode and octal/hex escapes in a string is not allowed"
 msgstr ""
+"det er ikkje mogleg å blanda Unicode og oktal- eller heksadesimal-koding i "
+"tekststrengar"
 
 #: src/main/gram.y:2286
 #, c-format
@@ -3920,7 +3915,7 @@ msgstr "einingsdrivaren støttar ikkje koordinatdetektering"
 
 #: src/main/graphics.c:2800 src/main/graphics.c:2836
 msgid "unable to allocate memory (in GPolygon)"
-msgstr "klarte ikkje tildela minne (i GPolygon)"
+msgstr "klarte ikkje reservera minne (i GPolygon)"
 
 #: src/main/graphics.c:3022
 msgid "zero-length arrow is of indeterminate angle and so skipped"
@@ -4200,7 +4195,7 @@ msgstr "fleire argument passar til det formelle argumentet «%s»"
 #: src/main/match.c:225 src/main/match.c:260
 #, c-format
 msgid "argument %d matches multiple formal arguments"
-msgstr "argumentet «%d» passar til fleire formelle argument"
+msgstr "argument nummer %d passar til fleire formelle argument"
 
 #: src/main/match.c:266
 #, c-format
@@ -4251,7 +4246,7 @@ msgstr "ikkje nok minne (nådde grensa?)"
 #: src/main/memory.c:1696 src/main/memory.c:1702
 #, c-format
 msgid "cannot allocate memory block of size %0.1f Gb"
-msgstr "klarte ikkje tildela minneblokk av storleik %0.1f Gb"
+msgstr "klarte ikkje reservera minneblokk av storleik %0.1f Gb"
 
 #: src/main/memory.c:1928
 msgid "negative length vectors are not allowed"
@@ -5245,9 +5240,8 @@ msgid "'%ls' already exists"
 msgstr "«%ls» finst alt"
 
 #: src/main/platform.c:2105
-#, fuzzy
 msgid "'mode' must be of length at least one"
-msgstr "«hadj» må ha lengd 1"
+msgstr "«mode» må ha minst eitt element"
 
 #: src/main/platform.c:2161
 msgid "insufficient OS support on this platform"
@@ -5377,14 +5371,12 @@ msgid "cannot mix zero-length and non-zero-length coordinates"
 msgstr "kan ikkje blanda koordinatar av lengd null og lengd ulik null"
 
 #: src/main/plot.c:1955
-#, fuzzy
 msgid "unable to allocate memory (in GPath)"
-msgstr "klarte ikkje tildela minne (i GPolygon)"
+msgstr "klarte ikkje reservera minne (i GPath)"
 
 #: src/main/plot.c:1961
-#, fuzzy
 msgid "invalid x or y (in GPath)"
-msgstr "ugyldig «Normal»-type i RNGkind"
+msgstr "ugyldig x eller y (i GPath)"
 
 #: src/main/plot.c:2084
 msgid "invalid arrow head length"
@@ -5562,7 +5554,7 @@ msgstr "ugyldig lengd på «%s»-argument"
 
 #: src/main/plot.c:4163
 msgid "unable to allocate memory (in do_xspline)"
-msgstr "klarte ikkje tildela minne (i do_xspline)"
+msgstr "klarte ikkje reservera minne (i do_xspline)"
 
 #: src/main/plot3d.c:720 src/main/plot3d.c:1012
 msgid "contour(): circular/long seglist -- bug.report()!"
@@ -6097,7 +6089,7 @@ msgstr "det første argumentet må ha modus «character»"
 #: src/main/scan.c:1435
 #, c-format
 msgid "Selection: "
-msgstr "Utval: "
+msgstr "Vel: "
 
 #: src/main/scan.c:1523 src/main/scan.c:1535
 msgid "cannot allocate buffer in 'readTableHead'"
@@ -6485,7 +6477,7 @@ msgstr "datalegnda er ikkje eit multiplum av splittvariabelen"
 
 #: src/main/split.c:56
 msgid "factor has bad level"
-msgstr ""
+msgstr "faktoren har ugyldige nivå"
 
 #: src/main/sprintf.c:93
 #, c-format
@@ -7676,9 +7668,9 @@ msgid "could not open file '%s'"
 msgstr "klarte ikkje opna fila «%s»"
 
 #: src/modules/X11/devX11.c:1978
-#, fuzzy, c-format
+#, c-format
 msgid "%s not available for this device"
-msgstr "Metrikkinformasjon ikkje tilgjengeleg for eininga"
+msgstr "%s er ikkje tilgjengeleg for eininga"
 
 #: src/modules/X11/devX11.c:2060
 msgid "Unable to create XImage"
@@ -7751,7 +7743,7 @@ msgstr "utklippstavla kan ikkje opnast (feilkode: %d)"
 
 #: src/modules/X11/devX11.c:3497
 msgid "cannot allocate memory for X11Routines structure"
-msgstr "klarte ikkje tildela minne for X11Routines-struktur"
+msgstr "klarte ikkje reservera minne for X11Routines-struktur"
 
 #: src/nmath/bessel_i.c:67
 msgid "bessel_i allocation error"
@@ -8019,23 +8011,22 @@ msgstr "linje %d kan vera trunkert i kall til system(, intern = TRUE)"
 
 #: src/unix/sys-unix.c:298
 #, c-format
-msgid "error in running command: %s'"
-msgstr ""
+msgid "error in running command: '%s'"
+msgstr "feil ved køyring av kommando: «%s»"
 
 #: src/unix/sys-unix.c:300
-#, fuzzy
 msgid "error in running command"
-msgstr "intern feil i unz-kode"
+msgstr "feil ved køyring av kommando"
 
 #: src/unix/sys-unix.c:304
 #, c-format
-msgid "running command '%s' had status %d: and error message '%s'"
-msgstr ""
+msgid "running command '%s' had status %d and error message '%s'"
+msgstr "køyring av kommandoen «%s» gav statusen %d og feilmeldinga «%s»"
 
 #: src/unix/sys-unix.c:309
 #, c-format
 msgid "running command '%s' had status %d"
-msgstr ""
+msgstr "køyring av kommandoen «%s» gav statusen %d"
 
 #: src/unix/sys-unix.c:390
 msgid "Sys.info() is not implemented on this system"
@@ -8081,54 +8072,3 @@ msgstr "X11-modulen kan ikkje lastast"
 #: src/unix/X11.c:188 src/unix/X11.c:194 src/unix/X11.c:200
 msgid "X11 is not available"
 msgstr "X11 er ikkje tilgjengeleg"
-
-#~ msgid "Insufficient memory (expandcmd)"
-#~ msgstr "Ikkje nok minne («expandcmd»)"
-
-#~ msgid "A \" is missing (expandcmd)"
-#~ msgstr "Det manglar ein \" («expandcmd»)"
-
-#~ msgid " not found"
-#~ msgstr " ikkje funnen"
-
-#~ msgid "Impossible to run "
-#~ msgstr "Klarte ikkje køyra "
-
-#~ msgid "Impossible to redirect input"
-#~ msgstr "Klarte ikkje vidaresenda inndata"
-
-#~ msgid "Impossible to create pipe"
-#~ msgstr "Klarte ikkje oppretta røyr"
-
-#~ msgid "Impossible to create thread/pipe"
-#~ msgstr "Klarte ikkje oppretta tråd/røyr"
-
-#~ msgid "pipe connections are not available on this system"
-#~ msgstr "røyrsamband er ikkje tilgjengelege på dette systemet"
-
-#~ msgid "'intern=TRUE' is not implemented on this platform"
-#~ msgstr "«intern=TRUE» er ikkje implementert på denne plattforma"
-
-#~ msgid "'onMouseDown' not supported"
-#~ msgstr "«onMouseDown» er ikkje støtta"
-
-#~ msgid "invalid 'onMouseDown' callback"
-#~ msgstr "ugyldig «onMouseDown»-tilbakekall"
-
-#~ msgid "'onMouseMove' not supported"
-#~ msgstr "«onMouseMove» er ikkje støtta"
-
-#~ msgid "invalid 'onMouseMove' callback"
-#~ msgstr "ugyldig «onMouseMove»-tilbakekall"
-
-#~ msgid "'onMouseUp' not supported"
-#~ msgstr "«onMouseUp» er ikkje støtta"
-
-#~ msgid "invalid 'onMouseUp' callback"
-#~ msgstr "ugyldig «onMouseUp»-tilbakekall"
-
-#~ msgid "'onKeybd' not supported"
-#~ msgstr "«onKeybd» er ikkje støtta"
-
-#~ msgid "invalid 'onKeybd' callback"
-#~ msgstr "ugyldig «onKeybd»-tilbakekall"
