--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: R 2.1.0\n"
 "Report-Msgid-Bugs-To: bugs@R-project.org\n"
-"POT-Creation-Date: 2010-09-23 07:21+0100\n"
+"POT-Creation-Date: 2010-09-27 09:34+0100\n"
 "PO-Revision-Date: 2005-05-20 18:26+0800\n"
 "Last-Translator: ronggui\n"
 "Language-Team: Chinese\n"
@@ -7904,9 +7904,9 @@ msgid "line %d may be truncated in call to system(, intern = TRUE)"
 msgstr "调用system(, intern = TRUE)时%d行可能会被截断"
 
 #: src/unix/sys-unix.c:298
-#, c-format
-msgid "error in running command: %s'"
-msgstr ""
+#, fuzzy, c-format
+msgid "error in running command: '%s'"
+msgstr "unz写码发生了内部错误"
 
 #: src/unix/sys-unix.c:300
 #, fuzzy
@@ -7915,7 +7915,7 @@ msgstr "unz写码发生了内部错误"
 
 #: src/unix/sys-unix.c:304
 #, c-format
-msgid "running command '%s' had status %d: and error message '%s'"
+msgid "running command '%s' had status %d and error message '%s'"
 msgstr ""
 
 #: src/unix/sys-unix.c:309
