more comments on locale names
git-svn-id: https://svn.r-project.org/R/trunk@53017 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2072,6 +2072,10 @@ information and lists can be found at
 
 It offers only one encoding per language.
 
+Some care is needed with Windows' locale names.  For example,
+@code{chinese} is Traditional Chinese and not Simplified Chinese as used
+in most of the Chinese-speaking world.
+
 @node Locales under Mac OS X,  , Locales under Windows, Locales
 @subsection Locales under Mac OS X
 
