--- a/doc/manual/R-data.texi
+++ b/doc/manual/R-data.texi
@@ -107,8 +107,8 @@ principal authors of the packages mentioned are
 @item @pkg{RSPython} @tab Duncan Temple Lang
 @item @pkg{RSQLite} @tab David A, James
 @item @pkg{SJava} @tab John Chambers and Duncan Temple Lang
-@item @pkg{WriteXLS} @tab Hans-Peter Suter
-@item @pkg{xlsReadWrite} @tab Marc Schwartz
+@item @pkg{WriteXLS} @tab Marc Schwartz
+@item @pkg{xlsReadWrite} @tab Hans-Peter Suter
 @item @pkg{XML} @tab Duncan Temple Lang
 @end multitable
 @end quotation
@@ -138,13 +138,13 @@ better than @R{} at this, and part of the thrust of this manual is to
 suggest that rather than duplicating functionality in @R{} we can make
 another system do the work!  (For example Therneau & Grambsch (2000)
 comment that they prefer to do data manipulation in SAS and then use
-@pkg{survival} in @Sl{} for the analysis.)  Several recent packages
-allow functionality developed in languages such as @code{Java},
-@code{perl} and @code{python} to be directly integrated with @R{} code,
-making the use of facilities in these languages even more
-appropriate.  (See the @pkg{SJava}, @pkg{RSPerl} and @pkg{RSPython}
-packages from the Omegahat project, @uref{http://www.omegahat.org}, and
-the @pkg{rJava} package from @acronym{CRAN}.)
+@pkg{survival} in @Sl{} for the analysis.)  Several packages allow
+functionality developed in languages such as @code{Java}, @code{perl}
+and @code{python} to be directly integrated with @R{} code, making the
+use of facilities in these languages even more appropriate.  (See the
+@pkg{SJava}, @pkg{RSPerl} and @pkg{RSPython} packages from the Omegahat
+project, @uref{http://www.omegahat.org}, and the @pkg{rJava} package
+from @acronym{CRAN}.)
 
 
 @cindex Unix tools
@@ -155,12 +155,8 @@ tradition of small re-usable tools, and it can be rewarding to use tools
 such as @code{awk} and @code{perl} to manipulate data before import or
 after export.  The case study in Becker, Chambers & Wilks (1988, Chapter
 9) is an example of this, where Unix tools were used to check and
-manipulate the data before input to @Sl{}.  @R{} itself takes that
-approach, using @code{perl} to manipulate its databases of help files
-rather than @R{} itself, and the function @code{read.fwf} used a call to
-a @code{perl} script until it was decided not to require @code{perl} at
-run-time.  The traditional Unix tools are now much more widely
-available, including on Windows.
+manipulate the data before input to @Sl{}. The traditional Unix tools
+are now much more widely available, including on Windows.
 
 @menu
 * Imports::                     
@@ -2113,8 +2109,7 @@ project at @uref{http://www.omegahat.org/RSCORBA/}.
 The most common R data import/export question seems to be `how do I read
 an Excel spreadsheet'.  This chapter collects together advice and
 options given earlier.  Note that most of the advice is for pre-Excel
-2007 spreadsheets: currently the only one of these methods that also reads
-the @file{.xlsx} format is that @emph{via} @pkg{RODBC}.
+2007 spreadsheets and not the later the @file{.xlsx} format.
 
 @findex read.csv
 @findex read.delim
@@ -2160,13 +2155,15 @@ they have a suitable driver (e.g.@: that from Actual Technologies).
 @code{Perl} users have contributed a module
 @code{OLE::SpreadSheet::ParseExcel} and a program @code{xls2csv.pl} to
 convert Excel 95--2003 spreadsheets to CSV files.  Package @pkg{gdata}
-provides a basic wrapper in its @code{read.xls} function.
+provides a basic wrapper in its @code{read.xls} function.  With suitable
+@code{Perl} modules installed this function can also read Excel 2007
+spreadsheets.
 
 @findex xlsReadWrite
-Windows-only package @pkg{xlsReadWrite} from
-@uref{http://treetron.googlepages.com/} and CRAN has a function
-@code{read.xls} to read @file{.xls} files (based on a third-party
-non-Open Source Delphi component).
+32-bit Windows package @pkg{xlsReadWrite} from
+@uref{http://www.swissr.org/} and CRAN has a function @code{read.xls} to
+read @file{.xls} files (based on a third-party non-Open-Source Delphi
+component).
 
 @findex dataframes2xls
 @findex WriteXLS
@@ -2177,9 +2174,9 @@ available in package @pkg{xlsReadWrite}.
 
 @findex xlsx
 @findex RExcelXML
-Two packages which can read and and manipulate Excel 2007/10 spreadsheets but not earlier
-formats are @pkg{xlsx} (which requires Java) and the Omegahat package
-@pkg{RExcelXML}.
+Two packages which can read and and manipulate Excel 2007/10
+spreadsheets but not earlier formats are @pkg{xlsx} (which requires
+Java) and the Omegahat package @pkg{RExcelXML}.
 
 
 @node References, Function and variable index, Reading Excel spreadsheets, Top
